@@ -1,6 +1,6 @@
 /*
- * Copyright (c) 2002-2025 Gargoyle Software Inc.
- * Copyright (c) 2005-2025 Xceptance Software Technologies GmbH
+ * Copyright (c) 2002-2026 Gargoyle Software Inc.
+ * Copyright (c) 2005-2026 Xceptance Software Technologies GmbH
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -39,8 +39,6 @@ import java.util.Set;
 import java.util.regex.Pattern;
 
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.math.NumberUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.htmlunit.BrowserVersion;
@@ -72,7 +70,10 @@ import org.htmlunit.cssparser.parser.LexicalUnit;
 import org.htmlunit.cssparser.parser.condition.AttributeCondition;
 import org.htmlunit.cssparser.parser.condition.Condition;
 import org.htmlunit.cssparser.parser.condition.Condition.ConditionType;
+import org.htmlunit.cssparser.parser.condition.HasPseudoClassCondition;
+import org.htmlunit.cssparser.parser.condition.IsPseudoClassCondition;
 import org.htmlunit.cssparser.parser.condition.NotPseudoClassCondition;
+import org.htmlunit.cssparser.parser.condition.WherePseudoClassCondition;
 import org.htmlunit.cssparser.parser.media.MediaQuery;
 import org.htmlunit.cssparser.parser.selector.ChildSelector;
 import org.htmlunit.cssparser.parser.selector.DescendantSelector;
@@ -80,6 +81,7 @@ import org.htmlunit.cssparser.parser.selector.DirectAdjacentSelector;
 import org.htmlunit.cssparser.parser.selector.ElementSelector;
 import org.htmlunit.cssparser.parser.selector.GeneralAdjacentSelector;
 import org.htmlunit.cssparser.parser.selector.PseudoElementSelector;
+import org.htmlunit.cssparser.parser.selector.RelativeSelector;
 import org.htmlunit.cssparser.parser.selector.Selector;
 import org.htmlunit.cssparser.parser.selector.Selector.SelectorType;
 import org.htmlunit.cssparser.parser.selector.SelectorList;
@@ -100,8 +102,8 @@ import org.htmlunit.html.HtmlStyle;
 import org.htmlunit.html.HtmlTextArea;
 import org.htmlunit.html.ValidatableElement;
 import org.htmlunit.javascript.host.css.MediaList;
-import org.htmlunit.javascript.host.dom.Document;
 import org.htmlunit.util.MimeType;
+import org.htmlunit.util.StringUtils;
 import org.htmlunit.util.UrlUtils;
 
 /**
@@ -179,8 +181,7 @@ public class CssStyleSheet implements Serializable {
     public static final Set<String> CSS4_PSEUDO_CLASSES;
 
     static {
-        CSS2_PSEUDO_CLASSES = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
-                "link", "visited", "hover", "active", "focus", "lang", "first-child")));
+        CSS2_PSEUDO_CLASSES = Set.of("link", "visited", "hover", "active", "focus", "lang", "first-child");
 
         final Set<String> css3 = new HashSet<>(Arrays.asList(
                 "checked", "disabled", "enabled", "indeterminated", "root", "target", "not()",
@@ -284,8 +285,8 @@ public class CssStyleSheet implements Serializable {
     /**
      * Loads the stylesheet at the specified link or href.
      * @param element the parent DOM element
-     * @param link the stylesheet's link (may be {@code null} if a <code>url</code> is specified)
-     * @param url the stylesheet's url (may be {@code null} if a <code>link</code> is specified)
+     * @param link the stylesheet's link (maybe {@code null} if a <code>url</code> is specified)
+     * @param url the stylesheet's url (maybe {@code null} if a <code>link</code> is specified)
      * @return the loaded stylesheet
      */
     public static CssStyleSheet loadStylesheet(final HtmlElement element, final HtmlLink link, final String url) {
@@ -321,8 +322,8 @@ public class CssStyleSheet implements Serializable {
                 // Use link.
                 request = link.getWebRequest();
 
+                final String type = link.getTypeAttribute();
                 if (client.getBrowserVersion().hasFeature(HTMLLINK_CHECK_TYPE_FOR_STYLESHEET)) {
-                    final String type = link.getTypeAttribute();
                     if (StringUtils.isNotBlank(type) && !MimeType.TEXT_CSS.equals(type)) {
                         return new CssStyleSheet(element, "", uri);
                     }
@@ -339,16 +340,19 @@ public class CssStyleSheet implements Serializable {
                 // our cache is a bit strange;
                 // loadWebResponse check the cache for the web response
                 // AND also fixes the request url for the following cache lookups
-                response = link.getWebResponse(true, request);
+                response = link.getWebResponse(true, request, true, type);
+                if (response == null) {
+                    return new CssStyleSheet(element, "", uri);
+                }
             }
 
             // now we can look into the cache with the fixed request for
             // a cached style sheet
             final Cache cache = client.getCache();
             final Object fromCache = cache.getCachedObject(request);
-            if (fromCache instanceof CSSStyleSheetImpl) {
+            if (fromCache instanceof CSSStyleSheetImpl impl) {
                 uri = request.getUrl().toExternalForm();
-                return new CssStyleSheet(element, (CSSStyleSheetImpl) fromCache, uri);
+                return new CssStyleSheet(element, impl, uri);
             }
 
             uri = response.getWebRequest().getUrl().toExternalForm();
@@ -358,7 +362,7 @@ public class CssStyleSheet implements Serializable {
 
             final CssStyleSheet sheet;
             final String contentType = response.getContentType();
-            if (StringUtils.isEmpty(contentType) || MimeType.TEXT_CSS.equals(contentType)) {
+            if (StringUtils.isEmptyOrNull(contentType) || MimeType.TEXT_CSS.equals(contentType)) {
                 try (InputStream in = response.getContentAsStreamWithBomIfApplicable()) {
                     if (in == null) {
                         if (LOG.isWarnEnabled()) {
@@ -502,8 +506,8 @@ public class CssStyleSheet implements Serializable {
                             fromQuerySelectorAll, throwOnSyntax)) {
                     for (DomNode prev1 = element.getPreviousSibling(); prev1 != null;
                                                         prev1 = prev1.getPreviousSibling()) {
-                        if (prev1 instanceof DomElement
-                            && selects(browserVersion, gas.getSelector(), (DomElement) prev1,
+                        if (prev1 instanceof DomElement domElement
+                            && selects(browserVersion, gas.getSelector(), domElement,
                                     pseudoElement, fromQuerySelectorAll, throwOnSyntax)) {
                             return true;
                         }
@@ -516,6 +520,53 @@ public class CssStyleSheet implements Serializable {
                     return pseudoName.equals(pseudoElement.substring(1));
                 }
                 return false;
+
+            case RELATIVE_SELECTOR:
+                final RelativeSelector rs = (RelativeSelector) selector;
+
+                switch (rs.getCombinator()) {
+                    case DESCENDANT_COMBINATOR:
+                        for (final DomElement descendant : element.getDomElementDescendants()) {
+                            if (selects(browserVersion, rs.getSelector(), descendant, pseudoElement,
+                                            fromQuerySelectorAll, throwOnSyntax)) {
+                                return true;
+                            }
+                        }
+                        return false;
+
+                    case CHILD_COMBINATOR:
+                        for (final DomElement child : element.getChildElements()) {
+                            if (selects(browserVersion, rs.getSelector(), child, pseudoElement,
+                                            fromQuerySelectorAll, throwOnSyntax)) {
+                                return true;
+                            }
+                        }
+                        return false;
+
+                    case NEXT_SIBLING_COMBINATOR:
+                        final DomElement nextSibling = element.getNextElementSibling();
+                        if (selects(browserVersion, rs.getSelector(), nextSibling, pseudoElement,
+                                            fromQuerySelectorAll, throwOnSyntax)) {
+                            return true;
+                        }
+                        return false;
+
+                    case SUBSEQUENT_SIBLING_COMBINATOR:
+                        for (DomNode n = element.getNextSibling(); n != null; n = n.getNextSibling()) {
+                            if (n instanceof DomElement domElement
+                                    && selects(browserVersion, rs.getSelector(), domElement, pseudoElement,
+                                                fromQuerySelectorAll, throwOnSyntax)) {
+                                return true;
+                            }
+                        }
+                        return false;
+
+                    default:
+                        if (LOG.isErrorEnabled()) {
+                            LOG.error("Unknown CSS combinator '" + rs.getCombinator() + "'.");
+                        }
+                        return false;
+                }
 
             default:
                 if (LOG.isErrorEnabled()) {
@@ -572,33 +623,33 @@ public class CssStyleSheet implements Serializable {
                 final AttributeCondition prefixAttributeCondition = (AttributeCondition) condition;
                 final String prefixValue = prefixAttributeCondition.getValue();
                 if (prefixAttributeCondition.isCaseInSensitive()) {
-                    return !org.htmlunit.util.StringUtils.isEmptyString(prefixValue)
+                    return !StringUtils.isEmptyString(prefixValue)
                             && StringUtils.startsWithIgnoreCase(
                                     element.getAttribute(prefixAttributeCondition.getLocalName()), prefixValue);
                 }
-                return !org.htmlunit.util.StringUtils.isEmptyString(prefixValue)
+                return !StringUtils.isEmptyString(prefixValue)
                         && element.getAttribute(prefixAttributeCondition.getLocalName()).startsWith(prefixValue);
 
             case SUFFIX_ATTRIBUTE_CONDITION:
                 final AttributeCondition suffixAttributeCondition = (AttributeCondition) condition;
                 final String suffixValue = suffixAttributeCondition.getValue();
                 if (suffixAttributeCondition.isCaseInSensitive()) {
-                    return !org.htmlunit.util.StringUtils.isEmptyString(suffixValue)
+                    return !StringUtils.isEmptyString(suffixValue)
                             && StringUtils.endsWithIgnoreCase(
                                     element.getAttribute(suffixAttributeCondition.getLocalName()), suffixValue);
                 }
-                return !org.htmlunit.util.StringUtils.isEmptyString(suffixValue)
+                return !StringUtils.isEmptyString(suffixValue)
                         && element.getAttribute(suffixAttributeCondition.getLocalName()).endsWith(suffixValue);
 
             case SUBSTRING_ATTRIBUTE_CONDITION:
                 final AttributeCondition substringAttributeCondition = (AttributeCondition) condition;
                 final String substringValue = substringAttributeCondition.getValue();
                 if (substringAttributeCondition.isCaseInSensitive()) {
-                    return !org.htmlunit.util.StringUtils.isEmptyString(substringValue)
+                    return !StringUtils.isEmptyString(substringValue)
                             && StringUtils.containsIgnoreCase(
                                     element.getAttribute(substringAttributeCondition.getLocalName()), substringValue);
                 }
-                return !org.htmlunit.util.StringUtils.isEmptyString(substringValue)
+                return !StringUtils.isEmptyString(substringValue)
                         && element.getAttribute(substringAttributeCondition.getLocalName()).contains(substringValue);
 
             case BEGIN_HYPHEN_ATTRIBUTE_CONDITION:
@@ -607,8 +658,8 @@ public class CssStyleSheet implements Serializable {
                 final String a = element.getAttribute(beginHyphenAttributeCondition.getLocalName());
                 if (beginHyphenAttributeCondition.isCaseInSensitive()) {
                     return selectsHyphenSeparated(
-                            org.htmlunit.util.StringUtils.toRootLowerCase(v),
-                            org.htmlunit.util.StringUtils.toRootLowerCase(a));
+                            StringUtils.toRootLowerCase(v),
+                            StringUtils.toRootLowerCase(a));
                 }
                 return selectsHyphenSeparated(v, a);
 
@@ -618,8 +669,8 @@ public class CssStyleSheet implements Serializable {
                 final String a2 = element.getAttribute(oneOfAttributeCondition.getLocalName());
                 if (oneOfAttributeCondition.isCaseInSensitive()) {
                     return selectsOneOf(
-                            org.htmlunit.util.StringUtils.toRootLowerCase(v2),
-                            org.htmlunit.util.StringUtils.toRootLowerCase(a2));
+                            StringUtils.toRootLowerCase(v2),
+                            StringUtils.toRootLowerCase(a2));
                 }
                 return selectsOneOf(v2, a2);
 
@@ -638,13 +689,41 @@ public class CssStyleSheet implements Serializable {
 
             case NOT_PSEUDO_CLASS_CONDITION:
                 final NotPseudoClassCondition notPseudoCondition = (NotPseudoClassCondition) condition;
-                final SelectorList selectorList = notPseudoCondition.getSelectors();
-                for (final Selector selector : selectorList) {
+                final SelectorList notSelectorList = notPseudoCondition.getSelectors();
+                for (final Selector selector : notSelectorList) {
                     if (selects(browserVersion, selector, element, null, fromQuerySelectorAll, throwOnSyntax)) {
                         return false;
                     }
                 }
                 return true;
+
+            case IS_PSEUDO_CLASS_CONDITION:
+                final IsPseudoClassCondition conditionIsPseudo = (IsPseudoClassCondition) condition;
+                for (final Selector selector : conditionIsPseudo.getSelectors()) {
+                    if (selects(browserVersion, selector, element, null, fromQuerySelectorAll, throwOnSyntax)) {
+                        return true;
+                    }
+                }
+                        return false;
+
+            case WHERE_PSEUDO_CLASS_CONDITION:
+                // same as is
+                final WherePseudoClassCondition conditionWherePseudo = (WherePseudoClassCondition) condition;
+                for (final Selector selector : conditionWherePseudo.getSelectors()) {
+                    if (selects(browserVersion, selector, element, null, fromQuerySelectorAll, throwOnSyntax)) {
+                        return true;
+                    }
+                }
+                return false;
+
+            case HAS_PSEUDO_CLASS_CONDITION:
+                final HasPseudoClassCondition conditionHasPseudo = (HasPseudoClassCondition) condition;
+                for (final Selector selector : conditionHasPseudo.getSelectors()) {
+                    if (selects(browserVersion, selector, element, null, fromQuerySelectorAll, throwOnSyntax)) {
+                return true;
+                    }
+                }
+                return false;
 
             case PSEUDO_CLASS_CONDITION:
                 return selectsPseudoClass(browserVersion, condition, element);
@@ -748,10 +827,10 @@ public class CssStyleSheet implements Serializable {
                 return element == element.getPage().getDocumentElement();
 
             case "enabled":
-                return element instanceof DisabledElement && !((DisabledElement) element).isDisabled();
+                return element instanceof DisabledElement de && !de.isDisabled();
 
             case "disabled":
-                return element instanceof DisabledElement && ((DisabledElement) element).isDisabled();
+                return element instanceof DisabledElement de && de.isDisabled();
 
             case "focus":
                 final HtmlPage htmlPage = element.getHtmlPageOrNull();
@@ -774,21 +853,21 @@ public class CssStyleSheet implements Serializable {
                 if (htmlPage3 != null) {
                     final DomElement focus = htmlPage3.getFocusedElement();
                     return element == focus
-                            && ((element instanceof HtmlInput && !((HtmlInput) element).isReadOnly())
-                                || (element instanceof HtmlTextArea && !((HtmlTextArea) element).isReadOnly()));
+                            && ((element instanceof HtmlInput hi && !hi.isReadOnly())
+                                || (element instanceof HtmlTextArea hta && !hta.isReadOnly()));
                 }
                 return false;
 
             case "checked":
-                return (element instanceof HtmlCheckBoxInput && ((HtmlCheckBoxInput) element).isChecked())
-                        || (element instanceof HtmlRadioButtonInput && ((HtmlRadioButtonInput) element).isChecked()
-                                || (element instanceof HtmlOption && ((HtmlOption) element).isSelected()));
+                return (element instanceof HtmlCheckBoxInput hcbi && hcbi.isChecked())
+                        || (element instanceof HtmlRadioButtonInput hrbi && hrbi.isChecked()
+                                || (element instanceof HtmlOption ho && ho.isSelected()));
 
             case "required":
-                return element instanceof HtmlElement && ((HtmlElement) element).isRequired();
+                return element instanceof HtmlElement he && he.isRequired();
 
             case "optional":
-                return element instanceof HtmlElement && ((HtmlElement) element).isOptional();
+                return element instanceof HtmlElement he && he.isOptional();
 
             case "first-child":
                 for (DomNode n = element.getPreviousSibling(); n != null; n = n.getPreviousSibling()) {
@@ -874,9 +953,9 @@ public class CssStyleSheet implements Serializable {
                 return element.isMouseOver();
 
             case "placeholder-shown":
-                return element instanceof HtmlInput
-                        && StringUtils.isEmpty(((HtmlInput) element).getValue())
-                        && StringUtils.isNotEmpty(((HtmlInput) element).getPlaceholder());
+                return element instanceof HtmlInput hi
+                        && StringUtils.isEmptyOrNull(hi.getValue())
+                        && !StringUtils.isEmptyOrNull(hi.getPlaceholder());
 
             default:
                 if (value.startsWith("nth-child(")) {
@@ -948,14 +1027,14 @@ public class CssStyleSheet implements Serializable {
         int denominator = 0;
         if (nIndex != -1) {
             String value = nth.substring(0, nIndex).trim();
-            if (org.htmlunit.util.StringUtils.equalsChar('-', value)) {
+            if (StringUtils.equalsChar('-', value)) {
                 denominator = -1;
             }
             else {
                 if (value.length() > 0 && value.charAt(0) == '+') {
                     value = value.substring(1);
                 }
-                denominator = NumberUtils.toInt(value, 1);
+                denominator = StringUtils.toInt(value, 1);
             }
         }
 
@@ -963,7 +1042,7 @@ public class CssStyleSheet implements Serializable {
         if (value.length() > 0 && value.charAt(0) == '+') {
             value = value.substring(1);
         }
-        final int numerator = NumberUtils.toInt(value, 0);
+        final int numerator = StringUtils.toInt(value, 0);
         if (denominator == 0) {
             return index == numerator && numerator > 0;
         }
@@ -1043,8 +1122,7 @@ public class CssStyleSheet implements Serializable {
             final Reader reader = source.getReader();
             if (null != reader) {
                 // try to reset to produce some output
-                if (reader instanceof StringReader) {
-                    final StringReader sr = (StringReader) reader;
+                if (reader instanceof StringReader sr) {
                     sr.reset();
                 }
                 return IOUtils.toString(reader);
@@ -1060,26 +1138,8 @@ public class CssStyleSheet implements Serializable {
     /**
      * Validates the list of selectors.
      * @param selectorList the selectors
-     * @param documentMode see {@link Document#getDocumentMode()}
      * @param domNode the dom node the query should work on
-     * @throws CSSException if a selector is invalid
      *
-     * @deprecated as of version 4.5.0; use {@link #validateSelectors(SelectorList, DomNode)} instead
-     */
-    @Deprecated
-    public static void validateSelectors(final SelectorList selectorList, final int documentMode,
-                final DomNode domNode) throws CSSException {
-        for (final Selector selector : selectorList) {
-            if (!isValidSelector(selector, domNode)) {
-                throw new CSSException("Invalid selector: " + selector, null);
-            }
-        }
-    }
-
-    /**
-     * Validates the list of selectors.
-     * @param selectorList the selectors
-     * @param domNode the dom node the query should work on
      * @throws CSSException if a selector is invalid
      */
     public static void validateSelectors(final SelectorList selectorList, final DomNode domNode) throws CSSException {
@@ -1090,9 +1150,6 @@ public class CssStyleSheet implements Serializable {
         }
     }
 
-    /**
-     * @param documentMode see {@link Document#getDocumentMode()}
-     */
     private static boolean isValidSelector(final Selector selector, final DomNode domNode) {
         switch (selector.getSelectorType()) {
             case ELEMENT_NODE_SELECTOR:
@@ -1121,6 +1178,19 @@ public class CssStyleSheet implements Serializable {
                 final GeneralAdjacentSelector gas = (GeneralAdjacentSelector) selector;
                 return isValidSelector(gas.getSelector(), domNode)
                         && isValidSelector(gas.getSimpleSelector(), domNode);
+            case PSEUDO_ELEMENT_SELECTOR:
+                // as of now (4.17) the htmlunit-cssparser accepts only supported selectors
+                // if ("first-line".equals(s)
+                //         || "first-letter".equals(s)
+                //         || "before".equals(s)
+                //         || "after".equals(s))
+                //     {
+                //         return new PseudoElementSelector(s, locator, doubleColon);
+                //     }
+                return true;
+            case RELATIVE_SELECTOR:
+                final RelativeSelector rs = (RelativeSelector) selector;
+                return isValidSelector(rs.getSelector(), domNode);
             default:
                 if (LOG.isWarnEnabled()) {
                     LOG.warn("Unhandled CSS selector type '"
@@ -1130,9 +1200,6 @@ public class CssStyleSheet implements Serializable {
         }
     }
 
-    /**
-     * @param documentMode see {@link Document#getDocumentMode()}
-     */
     private static boolean isValidCondition(final Condition condition, final DomNode domNode) {
         switch (condition.getConditionType()) {
             case ATTRIBUTE_CONDITION:
@@ -1147,8 +1214,32 @@ public class CssStyleSheet implements Serializable {
                 return true;
             case NOT_PSEUDO_CLASS_CONDITION:
                 final NotPseudoClassCondition notPseudoCondition = (NotPseudoClassCondition) condition;
-                final SelectorList selectorList = notPseudoCondition.getSelectors();
-                for (final Selector selector : selectorList) {
+                final SelectorList notSelectorList = notPseudoCondition.getSelectors();
+                for (final Selector selector : notSelectorList) {
+                    if (!isValidSelector(selector, domNode)) {
+                        return false;
+                    }
+                }
+                return true;
+            case IS_PSEUDO_CLASS_CONDITION:
+                final IsPseudoClassCondition conditionIsPseudo = (IsPseudoClassCondition) condition;
+                for (final Selector selector : conditionIsPseudo.getSelectors()) {
+                    if (!isValidSelector(selector, domNode)) {
+                        return false;
+                    }
+                }
+                return true;
+            case WHERE_PSEUDO_CLASS_CONDITION:
+                final WherePseudoClassCondition conditionWherePseudo = (WherePseudoClassCondition) condition;
+                for (final Selector selector : conditionWherePseudo.getSelectors()) {
+                    if (!isValidSelector(selector, domNode)) {
+                        return false;
+                    }
+                }
+                return true;
+            case HAS_PSEUDO_CLASS_CONDITION:
+                final HasPseudoClassCondition conditionHasPseudo = (HasPseudoClassCondition) condition;
+                for (final Selector selector : conditionHasPseudo.getSelectors()) {
                     if (!isValidSelector(selector, domNode)) {
                         return false;
                     }
@@ -1164,7 +1255,8 @@ public class CssStyleSheet implements Serializable {
                 }
 
                 if ("nth-child()".equals(value)) {
-                    final String arg = StringUtils.substringBetween(condition.getValue(), "(", ")").trim();
+                    final String arg = org.apache.commons.lang3.StringUtils
+                                        .substringBetween(condition.getValue(), "(", ")").trim();
                     return "even".equalsIgnoreCase(arg) || "odd".equalsIgnoreCase(arg)
                             || NTH_NUMERIC.matcher(arg).matches()
                             || NTH_COMPLEX.matcher(arg).matches();
@@ -1205,12 +1297,10 @@ public class CssStyleSheet implements Serializable {
      */
     public boolean isActive() {
         final String media;
-        if (owner_ instanceof HtmlStyle) {
-            final HtmlStyle style = (HtmlStyle) owner_;
+        if (owner_ instanceof HtmlStyle style) {
             media = style.getMediaAttribute();
         }
-        else if (owner_ instanceof HtmlLink) {
-            final HtmlLink link = (HtmlLink) owner_;
+        else if (owner_ instanceof HtmlLink link) {
             media = link.getMediaAttribute();
         }
         else {
@@ -1237,7 +1327,8 @@ public class CssStyleSheet implements Serializable {
             return true;
         }
 
-        for (int i = 0; i < mediaList.getLength(); i++) {
+        final int length = mediaList.getLength();
+        for (int i = 0; i < length; i++) {
             final MediaQuery mediaQuery = mediaList.mediaQuery(i);
             boolean isActive = isActive(mediaQuery, webWindow);
             if (mediaQuery.isNot()) {
@@ -1371,8 +1462,8 @@ public class CssStyleSheet implements Serializable {
         }
         else if ("print".equalsIgnoreCase(mediaType)) {
             final Page page = webWindow.getEnclosedPage();
-            if (page instanceof SgmlPage) {
-                return ((SgmlPage) page).isPrinting();
+            if (page instanceof SgmlPage sgmlPage) {
+                return sgmlPage.isPrinting();
             }
         }
         return false;
@@ -1382,7 +1473,9 @@ public class CssStyleSheet implements Serializable {
     private static double pixelValue(final CSSValueImpl cssValue, final WebWindow webWindow) {
         if (cssValue == null) {
             LOG.warn("CSSValue is null but has to be a 'px', 'em', '%', 'ex', 'ch', "
-                    + "'vw', 'vh', 'vmin', 'vmax', 'rem', 'mm', 'cm', 'Q', or 'pt' value.");
+                    + "'vw', 'vh', 'vmin', 'vmax', 'dvw', 'dvh', 'dvmin', 'dvmax', "
+                    + "'lvw', 'lvh', 'lvmin', 'lvmax', 'svw', 'svh', 'svmin', 'svmax', "
+                    + "'rem', 'mm', 'cm', 'Q', or 'pt' value.");
             return -1;
         }
 
@@ -1417,6 +1510,42 @@ public class CssStyleSheet implements Serializable {
                 case VMAX:
                     // hard coded default for the moment 16px = 100%
                     return 0.16f * cssValue.getDoubleValue();
+                case DVW:
+                    // hard coded default for the moment 16px = 100%
+                    return 0.16f * cssValue.getDoubleValue();
+                case DVH:
+                    // hard coded default for the moment 16px = 100%
+                    return 0.16f * cssValue.getDoubleValue();
+                case DVMIN:
+                    // hard coded default for the moment 16px = 100%
+                    return 0.16f * cssValue.getDoubleValue();
+                case DVMAX:
+                    // hard coded default for the moment 16px = 100%
+                    return 0.16f * cssValue.getDoubleValue();
+                case LVW:
+                    // hard coded default for the moment 16px = 100%
+                    return 0.16f * cssValue.getDoubleValue();
+                case LVH:
+                    // hard coded default for the moment 16px = 100%
+                    return 0.16f * cssValue.getDoubleValue();
+                case LVMIN:
+                    // hard coded default for the moment 16px = 100%
+                    return 0.16f * cssValue.getDoubleValue();
+                case LVMAX:
+                    // hard coded default for the moment 16px = 100%
+                    return 0.16f * cssValue.getDoubleValue();
+                case SVW:
+                    // hard coded default for the moment 16px = 100%
+                    return 0.16f * cssValue.getDoubleValue();
+                case SVH:
+                    // hard coded default for the moment 16px = 100%
+                    return 0.16f * cssValue.getDoubleValue();
+                case SVMIN:
+                    // hard coded default for the moment 16px = 100%
+                    return 0.16f * cssValue.getDoubleValue();
+                case SVMAX:
+                    // hard coded default for the moment 16px = 100%
+                    return 0.16f * cssValue.getDoubleValue();
                 case REM:
                     // hard coded default for the moment 16px = 100%
                     return 0.16f * cssValue.getDoubleValue();
@@ -1440,7 +1569,9 @@ public class CssStyleSheet implements Serializable {
         if (LOG.isWarnEnabled()) {
             LOG.warn("CSSValue '" + cssValue.getCssText()
                         + "' has to be a 'px', 'em', '%', 'ex', 'ch', "
-                        + "'vw', 'vh', 'vmin', 'vmax', 'rem', 'mm', 'cm', 'Q', or 'pt' value.");
+                        + "'vw', 'vh', 'vmin', 'vmax', 'dvw', 'dvh', 'dvmin', 'dvmax', "
+                        + "'lvw', 'lvh', 'lvmin', 'lvmax', 'svw', 'svh', 'svmin', 'svmax', "
+                        + "'rem', 'mm', 'cm', 'Q', or 'pt' value.");
         }
         return -1;
     }
@@ -1477,7 +1608,7 @@ public class CssStyleSheet implements Serializable {
      * @param style the style to modify
      * @param element the element to which style rules must apply in order for them to be added to
      *        the specified style
-     * @param pseudoElement a string specifying the pseudo-element to match (may be {@code null})
+     * @param pseudoElement a string specifying the pseudo-element to match (maybe {@code null})
      */
     public void modifyIfNecessary(final ComputedCssStyleDeclaration style, final DomElement element,
             final String pseudoElement) {
@@ -1509,8 +1640,7 @@ public class CssStyleSheet implements Serializable {
             final Set<String> alreadyProcessing) {
 
         for (final AbstractCSSRuleImpl rule : ruleList.getRules()) {
-            if (rule instanceof CSSStyleRuleImpl) {
-                final CSSStyleRuleImpl styleRule = (CSSStyleRuleImpl) rule;
+            if (rule instanceof CSSStyleRuleImpl styleRule) {
                 final SelectorList selectors = styleRule.getSelectors();
                 for (final Selector selector : selectors) {
                     final SimpleSelector simpleSel = selector.getSimpleSelector();
@@ -1534,8 +1664,7 @@ public class CssStyleSheet implements Serializable {
                     }
                 }
             }
-            else if (rule instanceof CSSImportRuleImpl) {
-                final CSSImportRuleImpl importRule = (CSSImportRuleImpl) rule;
+            else if (rule instanceof CSSImportRuleImpl importRule) {
 
                 final CssStyleSheet sheet = getImportedStyleSheet(importRule);
 
@@ -1552,8 +1681,7 @@ public class CssStyleSheet implements Serializable {
                     }
                 }
             }
-            else if (rule instanceof CSSMediaRuleImpl) {
-                final CSSMediaRuleImpl mediaRule = (CSSMediaRuleImpl) rule;
+            else if (rule instanceof CSSMediaRuleImpl mediaRule) {
                 final MediaListImpl mediaList = mediaRule.getMediaList();
                 if (mediaList.getLength() == 0 && index.getMediaList().getLength() == 0) {
                     index(index, mediaRule.getCssRules(), alreadyProcessing);
@@ -1574,7 +1702,7 @@ public class CssStyleSheet implements Serializable {
 
         if (isActive(index.getMediaList(), element.getPage().getEnclosingWindow())) {
             final String elementName = element.getLowercaseName();
-            final String[] classes = org.htmlunit.util.StringUtils.splitAtJavaWhitespace(
+            final String[] classes = StringUtils.splitAtJavaWhitespace(
                                                             element.getAttributeDirect("class"));
             final Iterator<CSSStyleSheetImpl.SelectorEntry> iter =
                     index.getSelectorEntriesIteratorFor(elementName, classes);
