@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002-2025 Gargoyle Software Inc.
+ * Copyright (c) 2002-2026 Gargoyle Software Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,13 +14,7 @@
  */
 package org.htmlunit.javascript.host.dom;
 
-import static org.htmlunit.BrowserVersionFeatures.EVENT_ONANIMATION_DOCUMENT_CREATE_NOT_SUPPORTED;
-import static org.htmlunit.BrowserVersionFeatures.EVENT_ONCLOSE_DOCUMENT_CREATE_NOT_SUPPORTED;
-import static org.htmlunit.BrowserVersionFeatures.EVENT_ONPOPSTATE_DOCUMENT_CREATE_NOT_SUPPORTED;
 import static org.htmlunit.BrowserVersionFeatures.EVENT_TYPE_MUTATIONEVENT;
-import static org.htmlunit.BrowserVersionFeatures.EVENT_TYPE_TEXTEVENT;
-import static org.htmlunit.BrowserVersionFeatures.EVENT_TYPE_WHEELEVENT;
-import static org.htmlunit.BrowserVersionFeatures.HTMLDOCUMENT_COOKIES_IGNORE_BLANK;
 import static org.htmlunit.BrowserVersionFeatures.JS_DOCUMENT_EVALUATE_RECREATES_RESULT;
 import static org.htmlunit.BrowserVersionFeatures.JS_DOCUMENT_SELECTION_RANGE_COUNT;
 import static org.htmlunit.javascript.configuration.SupportedBrowser.CHROME;
@@ -34,7 +28,6 @@ import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -44,13 +37,12 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.function.Predicate;
 
-import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.htmlunit.HttpHeader;
 import org.htmlunit.Page;
 import org.htmlunit.SgmlPage;
-import org.htmlunit.WebClient;
+import org.htmlunit.StringWebResponse;
 import org.htmlunit.WebResponse;
 import org.htmlunit.WebWindow;
 import org.htmlunit.corejs.javascript.Callable;
@@ -59,6 +51,7 @@ import org.htmlunit.corejs.javascript.Function;
 import org.htmlunit.corejs.javascript.NativeFunction;
 import org.htmlunit.corejs.javascript.Scriptable;
 import org.htmlunit.corejs.javascript.ScriptableObject;
+import org.htmlunit.corejs.javascript.VarScope;
 import org.htmlunit.cssparser.parser.CSSException;
 import org.htmlunit.html.DomComment;
 import org.htmlunit.html.DomDocumentFragment;
@@ -85,6 +78,7 @@ import org.htmlunit.html.HtmlSvg;
 import org.htmlunit.html.HtmlUnknownElement;
 import org.htmlunit.html.UnknownElementFactory;
 import org.htmlunit.html.impl.SimpleRange;
+import org.htmlunit.http.Cookie;
 import org.htmlunit.http.HttpUtils;
 import org.htmlunit.httpclient.HtmlUnitBrowserCompatCookieSpec;
 import org.htmlunit.javascript.HtmlUnitScriptable;
@@ -94,6 +88,7 @@ import org.htmlunit.javascript.configuration.JsxConstructor;
 import org.htmlunit.javascript.configuration.JsxFunction;
 import org.htmlunit.javascript.configuration.JsxGetter;
 import org.htmlunit.javascript.configuration.JsxSetter;
+import org.htmlunit.javascript.configuration.JsxStaticFunction;
 import org.htmlunit.javascript.host.Element;
 import org.htmlunit.javascript.host.FontFaceSet;
 import org.htmlunit.javascript.host.Location;
@@ -103,9 +98,10 @@ import org.htmlunit.javascript.host.animations.AnimationEvent;
 import org.htmlunit.javascript.host.css.StyleSheetList;
 import org.htmlunit.javascript.host.dom.AbstractList.EffectOnCache;
 import org.htmlunit.javascript.host.event.BeforeUnloadEvent;
-import org.htmlunit.javascript.host.event.CloseEvent;
 import org.htmlunit.javascript.host.event.CompositionEvent;
 import org.htmlunit.javascript.host.event.CustomEvent;
+import org.htmlunit.javascript.host.event.DeviceMotionEvent;
+import org.htmlunit.javascript.host.event.DeviceOrientationEvent;
 import org.htmlunit.javascript.host.event.DragEvent;
 import org.htmlunit.javascript.host.event.Event;
 import org.htmlunit.javascript.host.event.FocusEvent;
@@ -126,7 +122,7 @@ import org.htmlunit.javascript.host.html.HTMLBodyElement;
 import org.htmlunit.javascript.host.html.HTMLCollection;
 import org.htmlunit.javascript.host.html.HTMLElement;
 import org.htmlunit.javascript.host.html.HTMLFrameSetElement;
-import org.htmlunit.util.Cookie;
+import org.htmlunit.util.StringUtils;
 import org.htmlunit.util.UrlUtils;
 import org.htmlunit.xpath.xml.utils.PrefixResolver;
 import org.w3c.dom.CDATASection;
@@ -137,15 +133,15 @@ import org.w3c.dom.ProcessingInstruction;
 /**
  * A JavaScript object for {@code Document}.
  *
- * @author <a href="mailto:mbowler@GargoyleSoftware.com">Mike Bowler</a>
+ * @author Mike Bowler
  * @author David K. Taylor
- * @author <a href="mailto:chen_jun@users.sourceforge.net">Chen Jun</a>
- * @author <a href="mailto:cse@dynabean.de">Christian Sell</a>
+ * @author Chen Jun
+ * @author Christian Sell
  * @author Chris Erskine
  * @author Marc Guillemot
  * @author Daniel Gredler
  * @author Michael Ottati
- * @author <a href="mailto:george@murnock.com">George Murnock</a>
+ * @author George Murnock
  * @author Ahmed Ashour
  * @author Rob Di Marco
  * @author Ronald Brill
@@ -163,7 +159,10 @@ public class Document extends Node {
 
     private static final Log LOG = LogFactory.getLog(Document.class);
 
-    /** https://developer.mozilla.org/en/Rich-Text_Editing_in_Mozilla#Executing_Commands */
+    /**
+     * See <a href="https://developer.mozilla.org/en/Rich-Text_Editing_in_Mozilla#Executing_Commands">
+     *     Executing Commands</a>
+     */
     private static final Set<String> EXECUTE_CMDS_FF = new HashSet<>();
     private static final Set<String> EXECUTE_CMDS_CHROME = new HashSet<>();
     /** The formatter to use for the <code>lastModified</code> attribute. */
@@ -186,39 +185,37 @@ public class Document extends Node {
       have a no-arg constructor.
      */
     static {
-        final Map<String, Class<? extends Event>> dom2EventMap = new HashMap<>();
-        dom2EventMap.put("HTMLEvents", Event.class);
-        dom2EventMap.put("MouseEvents", MouseEvent.class);
-        dom2EventMap.put("MutationEvents", MutationEvent.class);
-        dom2EventMap.put("UIEvents", UIEvent.class);
-        SUPPORTED_DOM2_EVENT_TYPE_MAP = Collections.unmodifiableMap(dom2EventMap);
+        SUPPORTED_DOM2_EVENT_TYPE_MAP = Map.of(
+                "HTMLEvents", Event.class,
+                "MouseEvents", MouseEvent.class,
+                "MutationEvents", MutationEvent.class,
+                "UIEvents", UIEvent.class);
 
-        final Map<String, Class<? extends Event>> dom3EventMap = new HashMap<>();
-        dom3EventMap.put("Event", Event.class);
-        dom3EventMap.put("KeyboardEvent", KeyboardEvent.class);
-        dom3EventMap.put("MouseEvent", MouseEvent.class);
-        dom3EventMap.put("MessageEvent", MessageEvent.class);
-        dom3EventMap.put("MutationEvent", MutationEvent.class);
-        dom3EventMap.put("UIEvent", UIEvent.class);
-        dom3EventMap.put("CustomEvent", CustomEvent.class);
-        dom3EventMap.put("CloseEvent", CloseEvent.class);
-        dom3EventMap.put("CompositionEvent", CompositionEvent.class);
-        dom3EventMap.put("DragEvent", DragEvent.class);
-        dom3EventMap.put("TextEvent", TextEvent.class);
-        SUPPORTED_DOM3_EVENT_TYPE_MAP = Collections.unmodifiableMap(dom3EventMap);
+        SUPPORTED_DOM3_EVENT_TYPE_MAP = Map.ofEntries(
+                Map.entry("Event", Event.class),
+                Map.entry("KeyboardEvent", KeyboardEvent.class),
+                Map.entry("MouseEvent", MouseEvent.class),
+                Map.entry("MessageEvent", MessageEvent.class),
+                Map.entry("MutationEvent", MutationEvent.class),
+                Map.entry("UIEvent", UIEvent.class),
+                Map.entry("CustomEvent", CustomEvent.class),
+                Map.entry("CompositionEvent", CompositionEvent.class),
+                Map.entry("DragEvent", DragEvent.class),
+                Map.entry("TextEvent", TextEvent.class),
+                Map.entry("DeviceMotionEvent", DeviceMotionEvent.class),
+                Map.entry("DeviceOrientationEvent", DeviceOrientationEvent.class));
 
-        final Map<String, Class<? extends Event>> additionalEventMap = new HashMap<>();
-        additionalEventMap.put("BeforeUnloadEvent", BeforeUnloadEvent.class);
-        additionalEventMap.put("Events", Event.class);
-        additionalEventMap.put("HashChangeEvent", HashChangeEvent.class);
-        additionalEventMap.put("KeyEvents", KeyboardEvent.class);
-        additionalEventMap.put("PointerEvent", PointerEvent.class);
-        additionalEventMap.put("PopStateEvent", PopStateEvent.class);
-        additionalEventMap.put("ProgressEvent", ProgressEvent.class);
-        additionalEventMap.put("FocusEvent", FocusEvent.class);
-        additionalEventMap.put("WheelEvent", WheelEvent.class);
-        additionalEventMap.put("AnimationEvent", AnimationEvent.class);
-        SUPPORTED_VENDOR_EVENT_TYPE_MAP = Collections.unmodifiableMap(additionalEventMap);
+        SUPPORTED_VENDOR_EVENT_TYPE_MAP = Map.ofEntries(
+                Map.entry("BeforeUnloadEvent", BeforeUnloadEvent.class),
+                Map.entry("Events", Event.class),
+                Map.entry("HashChangeEvent", HashChangeEvent.class),
+                Map.entry("KeyEvents", KeyboardEvent.class),
+                Map.entry("PointerEvent", PointerEvent.class),
+                Map.entry("PopStateEvent", PopStateEvent.class),
+                Map.entry("ProgressEvent", ProgressEvent.class),
+                Map.entry("FocusEvent", FocusEvent.class),
+                Map.entry("WheelEvent", WheelEvent.class),
+                Map.entry("AnimationEvent", AnimationEvent.class));
     }
 
     private Window window_;
@@ -281,6 +278,44 @@ public class Document extends Node {
     @JsxConstructor
     public void jsConstructor() {
         throw JavaScriptEngine.typeErrorIllegalConstructor();
+    }
+
+    /**
+     * Parses the given string of HTML without sanitizing it and returns a new HTMLDocument.
+     *
+     * @param cx the current context
+     * @param scope the scope
+     * @param thisObj the scriptable this object
+     * @param args the arguments
+     * @param funObj the function object
+     * @return a newly created {@link org.htmlunit.javascript.host.html.HTMLDocument}
+     *
+     * @see <a href="https://html.spec.whatwg.org/multipage/dynamic-markup-insertion.html#dom-parsehtmlunsafe">
+     *     HTML spec - parseHTMLUnsafe</a>
+     */
+    @JsxStaticFunction
+    public static Document parseHTMLUnsafe(final Context cx, final VarScope scope,
+            final Scriptable thisObj, final Object[] args, final Function funObj) {
+        if (args.length < 1) {
+            throw JavaScriptEngine
+                    .typeError("Document.parseHTMLUnsafe: At least 1 argument required, but only 0 passed");
+        }
+
+        final Window win = getWindow(thisObj);
+        if (JavaScriptEngine.isUndefined(args[0])) {
+            return win.getDocument();
+        }
+
+        final String html = JavaScriptEngine.toString(args[0]);
+
+        try {
+            final WebWindow webWindow = win.getWebWindow();
+            final WebResponse webResponse = new StringWebResponse(html, webWindow.getEnclosedPage().getUrl());
+            return DOMParser.parseHtmlDocument(win.getDocument(), webResponse, webWindow);
+        }
+        catch (final IOException e) {
+            throw JavaScriptEngine.syntaxError("Parsing failed" + e.getMessage());
+        }
     }
 
     /**
@@ -467,7 +502,7 @@ public class Document extends Node {
 
     /**
      * Adopts a node from an external document.
-     * The node and its subtree is removed from the document it's in (if any),
+     * The node and its subtree are removed from the document it's in (if any),
      * and its ownerDocument is changed to the current document.
      * The node can then be inserted into the current document.
      *
@@ -488,7 +523,7 @@ public class Document extends Node {
     public DOMImplementation getImplementation() {
         if (implementation_ == null) {
             implementation_ = new DOMImplementation();
-            implementation_.setParentScope(getWindow());
+            implementation_.setParentScope(getParentScope());
             implementation_.setPrototype(getPrototype(implementation_.getClass()));
         }
         return implementation_;
@@ -502,10 +537,10 @@ public class Document extends Node {
      *         in scope for a specified node
      */
     @JsxFunction
-    public XPathNSResolver createNSResolver(final Node nodeResolver) {
-        final XPathNSResolver resolver = new XPathNSResolver();
+    public NativeXPathNSResolver createNSResolver(final Node nodeResolver) {
+        final NativeXPathNSResolver resolver = new NativeXPathNSResolver();
         resolver.setElement(nodeResolver);
-        resolver.setParentScope(getWindow());
+        resolver.setParentScope(getParentScope());
         resolver.setPrototype(getPrototype(resolver.getClass()));
         return resolver;
     }
@@ -547,8 +582,8 @@ public class Document extends Node {
     public XPathResult evaluate(final String expression, final Node contextNode,
             final Object resolver, final int type, final Object result) {
         XPathResult xPathResult = null;
-        if (result instanceof XPathResult) {
-            xPathResult = (XPathResult) result;
+        if (result instanceof XPathResult pathResult) {
+            xPathResult = pathResult;
 
             if (getBrowserVersion().hasFeature(JS_DOCUMENT_EVALUATE_RECREATES_RESULT)) {
                 xPathResult = new XPathResult();
@@ -569,12 +604,12 @@ public class Document extends Node {
 
         try {
             PrefixResolver prefixResolver = null;
-            if (resolver instanceof NativeFunction) {
+            if (resolver instanceof NativeFunction function) {
                 prefixResolver = new NativeFunctionPrefixResolver(
-                                            (NativeFunction) resolver, contextNode.getParentScope());
+                                            function, contextNode.getParentScope());
             }
-            else if (resolver instanceof PrefixResolver) {
-                prefixResolver = (PrefixResolver) resolver;
+            else if (resolver instanceof PrefixResolver prefixResolver1) {
+                prefixResolver = prefixResolver1;
             }
             xPathResult.init(contextNode.getDomNodeOrDie().getByXPath(expression, prefixResolver), type);
             return xPathResult;
@@ -608,14 +643,24 @@ public class Document extends Node {
         // NameChar      ::= NameStartChar | "-" | "." | [0-9] | #xB7 | [#x0300-#x036F] | [#x203F-#x2040]
         // Name          ::= NameStartChar (NameChar)*
 
-        // but i have no idea what the browsers are doing
+        // but I have no idea what the browsers are doing
         // the following code is a wild guess that might be good enough for the moment
+
+        // April 2026
+        // looks like the browsers using a more simple approach now
+        // see
+        //   org.htmlunit.javascript.host.dom.DocumentTest.documentCreateElementValidTagNames()
+        //   org.htmlunit.javascript.host.dom.DocumentTest.documentCreateElementValidTagNames1000()
+        //   org.htmlunit.javascript.host.dom.DocumentTest.documentCreateElementValidTagNames2000()
+        //   org.htmlunit.javascript.host.dom.DocumentTest.documentCreateElementValidTagNames3000()
+        //   org.htmlunit.javascript.host.dom.DocumentTest.documentCreateElementValidTagNames4000()
+
         final String tagNameString = JavaScriptEngine.toString(tagName);
         if (tagNameString.length() > 0) {
             final int firstChar = tagNameString.charAt(0);
-            if (!(isLetter(firstChar)
-                    || ':' == firstChar
-                    || '_' == firstChar)) {
+            if (firstChar < 128
+                    && !Character.isLetter(firstChar)
+                    && firstChar != ':' && firstChar != '_') {
                 if (LOG.isInfoEnabled()) {
                     LOG.info("createElement: Provided string '" + tagNameString + "' contains an invalid character");
                 }
@@ -624,45 +669,52 @@ public class Document extends Node {
                         "createElement: Provided string '" + tagNameString + "' contains an invalid character",
                         org.htmlunit.javascript.host.dom.DOMException.INVALID_CHARACTER_ERR);
             }
-            for (int i = 1; i < tagNameString.length(); i++) {
+
+            final int length = tagNameString.length();
+            for (int i = 1; i < length; i++) {
                 final int c = tagNameString.charAt(i);
-                if (!(Character.isLetterOrDigit(c)
-                        || ':' == c
-                        || '_' == c
-                        || '-' == c
-                        || '.' == c)) {
-                    if (LOG.isInfoEnabled()) {
-                        LOG.info("createElement: Provided string '"
-                                    + tagNameString + "' contains an invalid character");
+                if (c < 128) {
+                    if (c == 0
+                            || c == 9
+                            || c == 10
+                            || c == 12
+                            || c == 13
+                            || c == ' '
+                            || c == '/'
+                            || c == '>') {
+                        if (LOG.isInfoEnabled()) {
+                            LOG.info("createElement: Provided string '"
+                                        + tagNameString + "' contains an invalid character");
+                        }
+                        throw JavaScriptEngine.asJavaScriptException(
+                                getWindow(),
+                                "createElement: Provided string '" + tagNameString
+                                    + "' contains an invalid character",
+                                org.htmlunit.javascript.host.dom.DOMException.INVALID_CHARACTER_ERR);
                     }
-                    throw JavaScriptEngine.asJavaScriptException(
-                            getWindow(),
-                            "createElement: Provided string '" + tagNameString
-                                + "' contains an invalid character",
-                            org.htmlunit.javascript.host.dom.DOMException.INVALID_CHARACTER_ERR);
                 }
             }
         }
 
         org.w3c.dom.Node element = getPage().createElement(tagNameString);
 
-        if (element instanceof HtmlImage) {
-            ((HtmlImage) element).markAsCreatedByJavascript();
+        if (element instanceof HtmlImage image) {
+            image.markAsCreatedByJavascript();
         }
-        else if (element instanceof HtmlRb) {
-            ((HtmlRb) element).markAsCreatedByJavascript();
+        else if (element instanceof HtmlRb rb) {
+            rb.markAsCreatedByJavascript();
         }
-        else if (element instanceof HtmlRp) {
-            ((HtmlRp) element).markAsCreatedByJavascript();
+        else if (element instanceof HtmlRp rp) {
+            rp.markAsCreatedByJavascript();
         }
-        else if (element instanceof HtmlRt) {
-            ((HtmlRt) element).markAsCreatedByJavascript();
+        else if (element instanceof HtmlRt rt) {
+            rt.markAsCreatedByJavascript();
         }
-        else if (element instanceof HtmlRtc) {
-            ((HtmlRtc) element).markAsCreatedByJavascript();
+        else if (element instanceof HtmlRtc rtc) {
+            rtc.markAsCreatedByJavascript();
         }
-        else if (element instanceof HtmlUnknownElement) {
-            ((HtmlUnknownElement) element).markAsCreatedByJavascript();
+        else if (element instanceof HtmlUnknownElement unknownElement) {
+            unknownElement.markAsCreatedByJavascript();
         }
         else if (element instanceof HtmlSvg) {
             element = UnknownElementFactory.INSTANCE.createElementNS(getPage(), "", "svg", null);
@@ -678,15 +730,6 @@ public class Document extends Node {
             }
         }
         return jsElement;
-    }
-
-    // our version of the Character.isLetter() without MODIFIER_LETTER
-    private static boolean isLetter(final int codePoint) {
-        return ((((1 << Character.UPPERCASE_LETTER)
-                    | (1 << Character.LOWERCASE_LETTER)
-                    | (1 << Character.TITLECASE_LETTER)
-                    | (1 << Character.OTHER_LETTER)
-                ) >> Character.getType(codePoint)) & 1) != 0;
     }
 
     /**
@@ -722,7 +765,7 @@ public class Document extends Node {
     public HTMLCollection getElementsByTagName(final String tagName) {
         final HTMLCollection collection = new HTMLCollection(getDomNodeOrDie(), false);
 
-        if (org.htmlunit.util.StringUtils.equalsChar('*', tagName)) {
+        if (StringUtils.equalsChar('*', tagName)) {
             collection.setIsMatchingPredicate((Predicate<DomNode> & Serializable) node -> true);
         }
         else {
@@ -790,7 +833,7 @@ public class Document extends Node {
      * Returns the value of the JavaScript property {@code anchors}.
      * @see <a href="http://msdn.microsoft.com/en-us/library/ms537435.aspx">MSDN documentation</a>
      * @see <a href="http://www.mozilla.org/docs/dom/domref/dom_doc_ref4.html#1024543">
-     * Gecko DOM reference</a>
+     *     Gecko DOM reference</a>
      * @return the value of this property
      */
     @JsxGetter
@@ -800,10 +843,9 @@ public class Document extends Node {
         anchors.setIsMatchingPredicate(
                 (Predicate<DomNode> & Serializable)
                 node -> {
-                    if (!(node instanceof HtmlAnchor)) {
+                    if (!(node instanceof HtmlAnchor anchor)) {
                         return false;
                     }
-                    final HtmlAnchor anchor = (HtmlAnchor) node;
                     return anchor.hasAttribute(DomElement.NAME_ATTRIBUTE);
                 });
 
@@ -823,9 +865,9 @@ public class Document extends Node {
     /**
      * Returns the value of the JavaScript property {@code applets}.
      * @see <a href="http://msdn.microsoft.com/en-us/library/ms537436.aspx">
-     * MSDN documentation</a>
+     *     MSDN documentation</a>
      * @see <a href="https://developer.mozilla.org/En/DOM:document.applets">
-     * Gecko DOM reference</a>
+     *     Gecko DOM reference</a>
      * @return the value of this property
      */
     @JsxGetter
@@ -840,8 +882,7 @@ public class Document extends Node {
     @JsxGetter
     public HTMLElement getBody() {
         final Page page = getPage();
-        if (page instanceof HtmlPage) {
-            final HtmlPage htmlPage = (HtmlPage) page;
+        if (page instanceof HtmlPage htmlPage) {
             final HtmlElement body = htmlPage.getBody();
             if (body != null) {
                 return body.getScriptableObject();
@@ -852,7 +893,7 @@ public class Document extends Node {
             if (doc != null) {
                 for (final DomNode node : doc.getChildren()) {
                     if (node instanceof HtmlFrameSet) {
-                        return (HTMLElement) node.getScriptableObject();
+                        return node.getScriptableObject();
                     }
                 }
             }
@@ -868,8 +909,8 @@ public class Document extends Node {
     public void setBody(final HTMLElement htmlElement) {
         if (htmlElement instanceof HTMLBodyElement || htmlElement instanceof HTMLFrameSetElement) {
             final Page page = getPage();
-            if (page instanceof HtmlPage) {
-                final HtmlElement body = ((HtmlPage) page).getBody();
+            if (page instanceof HtmlPage htmlPage) {
+                final HtmlElement body = htmlPage.getBody();
                 if (body != null) {
                     body.replace(htmlElement.getDomNodeOrDie());
                 }
@@ -959,7 +1000,7 @@ public class Document extends Node {
     /**
      * <span style="color:red">INTERNAL API - SUBJECT TO CHANGE AT ANY TIME - USE AT YOUR OWN RISK.</span><br>
      *
-     * Called from the HTMLParser if a 'X-UA-Compatible' meta tag found.
+     * Called from the HTMLParser if an 'X-UA-Compatible' meta tag found.
      * @param documentMode the mode forced by the meta tag
      */
     public void forceDocumentMode(final int documentMode) {
@@ -1000,7 +1041,7 @@ public class Document extends Node {
     @JsxFunction
     public NodeList querySelectorAll(final String selectors) {
         try {
-            return NodeList.staticNodeList(this, getDomNodeOrDie().querySelectorAll(selectors));
+            return NodeList.staticNodeList(getParentScope(), getDomNodeOrDie().querySelectorAll(selectors));
         }
         catch (final CSSException e) {
             throw JavaScriptEngine.asJavaScriptException(
@@ -1111,18 +1152,16 @@ public class Document extends Node {
     /**
      * Adds a cookie, as long as cookies are enabled.
      * @see <a href="http://msdn.microsoft.com/en-us/library/ms533693.aspx">MSDN documentation</a>
-     * @param newCookie in the format "name=value[;expires=date][;domain=domainname][;path=path][;secure]
+     * @param newCookie in the format "name=value[;expires=date][;domain=domainname][;path=path][;secure]"
      */
     @JsxSetter
     public void setCookie(final String newCookie) {
-        final SgmlPage sgmlPage = getPage();
-        final WebClient client = sgmlPage.getWebClient();
-
-        if (StringUtils.isBlank(newCookie)
-                && client.getBrowserVersion().hasFeature(HTMLDOCUMENT_COOKIES_IGNORE_BLANK)) {
+        if (StringUtils.isBlank(newCookie)) {
             return;
         }
-        client.addCookie(newCookie, sgmlPage.getUrl(), this);
+
+        final SgmlPage sgmlPage = getPage();
+        sgmlPage.getWebClient().addCookie(newCookie, sgmlPage.getUrl(), this);
     }
 
     /**
@@ -1141,14 +1180,6 @@ public class Document extends Node {
         Class<? extends Event> clazz = SUPPORTED_DOM2_EVENT_TYPE_MAP.get(eventType);
         if (clazz == null) {
             clazz = SUPPORTED_DOM3_EVENT_TYPE_MAP.get(eventType);
-            if (CloseEvent.class == clazz
-                    && getBrowserVersion().hasFeature(EVENT_ONCLOSE_DOCUMENT_CREATE_NOT_SUPPORTED)) {
-                clazz = null;
-            }
-            else if (TextEvent.class == clazz
-                    && !getBrowserVersion().hasFeature(EVENT_TYPE_TEXTEVENT)) {
-                clazz = CompositionEvent.class;
-            }
         }
 
         if (MutationEvent.class == clazz
@@ -1159,21 +1190,8 @@ public class Document extends Node {
                 && ("Events".equals(eventType)
                     || "HashChangeEvent".equals(eventType)
                     || "BeforeUnloadEvent".equals(eventType)
-                    || "PopStateEvent".equals(eventType)
-                    || "FocusEvent".equals(eventType)
-                    || "WheelEvent".equals(eventType)
-                            && getBrowserVersion().hasFeature(EVENT_TYPE_WHEELEVENT)
-                    || "AnimationEvent".equals(eventType))) {
+                    || "FocusEvent".equals(eventType))) {
             clazz = SUPPORTED_VENDOR_EVENT_TYPE_MAP.get(eventType);
-
-            if (PopStateEvent.class == clazz
-                    && getBrowserVersion().hasFeature(EVENT_ONPOPSTATE_DOCUMENT_CREATE_NOT_SUPPORTED)) {
-                clazz = null;
-            }
-            if (AnimationEvent.class == clazz
-                    && getBrowserVersion().hasFeature(EVENT_ONANIMATION_DOCUMENT_CREATE_NOT_SUPPORTED)) {
-                clazz = null;
-            }
         }
 
         if (clazz == null) {
@@ -1185,7 +1203,7 @@ public class Document extends Node {
 
         try {
             final Event event = clazz.getDeclaredConstructor().newInstance();
-            event.setParentScope(getWindow());
+            event.setParentScope(getParentScope());
             event.setPrototype(getPrototype(clazz));
             event.eventCreated();
             return event;
@@ -1202,7 +1220,7 @@ public class Document extends Node {
      *
      * @param root The root node at which to begin the NodeIterator's traversal.
      * @param whatToShow an optional long representing a bitmask created by combining
-     * the constant properties of {@link NodeFilter}
+     *        the constant properties of {@link NodeFilter}
      * @param filter an object implementing the {@link NodeFilter} interface
      * @return a new NodeIterator object
      */
@@ -1222,8 +1240,8 @@ public class Document extends Node {
             filterWrapper = n -> {
                 final Object[] args = {((DomNode) n).getScriptableObject()};
                 final Object response;
-                if (filter instanceof Callable) {
-                    response = ((Callable) filter).call(Context.getCurrentContext(), filter, filter, args);
+                if (filter instanceof Callable callable) {
+                    response = callable.call(Context.getCurrentContext(), filter.getParentScope(), filter, args);
                 }
                 else {
                     if (filterFunctionOnly) {
@@ -1260,17 +1278,15 @@ public class Document extends Node {
      */
     @JsxFunction
     public TreeWalker createTreeWalker(final Node root, final double whatToShow, final Scriptable filter,
-            boolean expandEntityReferences) throws DOMException {
+            final boolean expandEntityReferences) throws DOMException {
 
         // seems that Rhino doesn't like long as parameter type
         // this strange conversation preserves NodeFilter.SHOW_ALL
         final int whatToShowI = (int) Double.valueOf(whatToShow).longValue();
 
-        expandEntityReferences = false;
-
         final org.w3c.dom.traversal.NodeFilter filterWrapper = createFilterWrapper(filter, false);
-        final TreeWalker t = new TreeWalker(root, whatToShowI, filterWrapper, expandEntityReferences);
-        t.setParentScope(getWindow(this));
+        final TreeWalker t = new TreeWalker(root, whatToShowI, filterWrapper, false);
+        t.setParentScope(getParentScope());
         t.setPrototype(staticGetPrototype(getWindow(this), TreeWalker.class));
         return t;
     }
@@ -1293,7 +1309,7 @@ public class Document extends Node {
     @JsxFunction
     public Range createRange() {
         final Range range = new Range(this);
-        range.setParentScope(getWindow());
+        range.setParentScope(getParentScope());
         range.setPrototype(getPrototype(Range.class));
         return range;
     }
@@ -1303,7 +1319,7 @@ public class Document extends Node {
      * cannot be identified by a domain name.
      * @return the domain name of the server that served the document
      * @see <a href="http://www.w3.org/TR/2000/WD-DOM-Level-1-20000929/level-one-html.html#ID-2250147">
-     * W3C documentation</a>
+     *     W3C documentation</a>
      */
     @JsxGetter
     public String getDomain() {
@@ -1311,8 +1327,8 @@ public class Document extends Node {
             URL url = getPage().getUrl();
             if (url == UrlUtils.URL_ABOUT_BLANK) {
                 final WebWindow w = getWindow().getWebWindow();
-                if (w instanceof FrameWindow) {
-                    url = ((FrameWindow) w).getEnclosingPage().getUrl();
+                if (w instanceof FrameWindow window) {
+                    url = window.getEnclosingPage().getUrl();
                 }
                 else {
                     return null;
@@ -1328,7 +1344,7 @@ public class Document extends Node {
      * Sets the domain of this document.
      *
      * <p>Domains can only be set to suffixes of the existing domain
-     * with the exception of setting the domain to itself.</p>
+     * with the except of setting the domain to itself.</p>
      * <p>
      * The domain will be set according to the following rules:
      * <ol>
@@ -1668,7 +1684,7 @@ public class Document extends Node {
      * @return the {@code hidden} property
      */
     @JsxGetter
-    public boolean getHidden() {
+    public boolean isHidden() {
         return false;
     }
 
@@ -1704,13 +1720,7 @@ public class Document extends Node {
      */
     @JsxGetter
     public HTMLCollection getForms() {
-        final HTMLCollection forms = new HTMLCollection(getDomNodeOrDie(), false) {
-            @Override
-            public Object call(final Context cx, final Scriptable scope,
-                    final Scriptable thisObj, final Object[] args) {
-                throw JavaScriptEngine.typeError("document.forms is not a function");
-            }
-        };
+        final HTMLCollection forms = new HTMLCollection(getDomNodeOrDie(), false);
 
         forms.setIsMatchingPredicate(
                 (Predicate<DomNode> & Serializable)
@@ -1724,13 +1734,7 @@ public class Document extends Node {
      */
     @JsxGetter
     public HTMLCollection getEmbeds() {
-        final HTMLCollection embeds = new HTMLCollection(getDomNodeOrDie(), false) {
-            @Override
-            public Object call(final Context cx, final Scriptable scope,
-                    final Scriptable thisObj, final Object[] args) {
-                throw JavaScriptEngine.typeError("document.embeds is not a function");
-            }
-        };
+        final HTMLCollection embeds = new HTMLCollection(getDomNodeOrDie(), false);
 
         embeds.setIsMatchingPredicate((Predicate<DomNode> & Serializable) node -> node instanceof HtmlEmbed);
         return embeds;
@@ -1742,13 +1746,7 @@ public class Document extends Node {
      */
     @JsxGetter
     public HTMLCollection getImages() {
-        final HTMLCollection images = new HTMLCollection(getDomNodeOrDie(), false) {
-            @Override
-            public Object call(final Context cx, final Scriptable scope,
-                    final Scriptable thisObj, final Object[] args) {
-                throw JavaScriptEngine.typeError("document.images is not a function");
-            }
-        };
+        final HTMLCollection images = new HTMLCollection(getDomNodeOrDie(), false);
 
         images.setIsMatchingPredicate((Predicate<DomNode> & Serializable) node -> node instanceof HtmlImage);
         return images;
@@ -1760,13 +1758,7 @@ public class Document extends Node {
      */
     @JsxGetter
     public HTMLCollection getScripts() {
-        final HTMLCollection scripts = new HTMLCollection(getDomNodeOrDie(), false) {
-            @Override
-            public Object call(final Context cx, final Scriptable scope,
-                    final Scriptable thisObj, final Object[] args) {
-                throw JavaScriptEngine.typeError("document.scripts is not a function");
-            }
-        };
+        final HTMLCollection scripts = new HTMLCollection(getDomNodeOrDie(), false);
 
         scripts.setIsMatchingPredicate((Predicate<DomNode> & Serializable) node -> node instanceof HtmlScript);
         return scripts;
@@ -2009,8 +2001,8 @@ public class Document extends Node {
     @JsxGetter
     public String getAlinkColor() {
         final HTMLElement body = getBody();
-        if (body instanceof HTMLBodyElement) {
-            return ((HTMLBodyElement) body).getALink();
+        if (body instanceof HTMLBodyElement element) {
+            return element.getALink();
         }
         return null;
     }
@@ -2022,8 +2014,8 @@ public class Document extends Node {
     @JsxSetter
     public void setAlinkColor(final String color) {
         final HTMLElement body = getBody();
-        if (body instanceof HTMLBodyElement) {
-            ((HTMLBodyElement) body).setALink(color);
+        if (body instanceof HTMLBodyElement element) {
+            element.setALink(color);
         }
     }
 
@@ -2035,8 +2027,8 @@ public class Document extends Node {
     @JsxGetter
     public String getBgColor() {
         final HTMLElement body = getBody();
-        if (body instanceof HTMLBodyElement) {
-            return ((HTMLBodyElement) body).getBgColor();
+        if (body instanceof HTMLBodyElement element) {
+            return element.getBgColor();
         }
         return null;
     }
@@ -2049,8 +2041,8 @@ public class Document extends Node {
     @JsxSetter
     public void setBgColor(final String color) {
         final HTMLElement body = getBody();
-        if (body instanceof HTMLBodyElement) {
-            ((HTMLBodyElement) body).setBgColor(color);
+        if (body instanceof HTMLBodyElement element) {
+            element.setBgColor(color);
         }
     }
 
@@ -2061,8 +2053,8 @@ public class Document extends Node {
     @JsxGetter
     public String getFgColor() {
         final HTMLElement body = getBody();
-        if (body instanceof HTMLBodyElement) {
-            return ((HTMLBodyElement) body).getText();
+        if (body instanceof HTMLBodyElement element) {
+            return element.getText();
         }
         return null;
     }
@@ -2074,8 +2066,8 @@ public class Document extends Node {
     @JsxSetter
     public void setFgColor(final String color) {
         final HTMLElement body = getBody();
-        if (body instanceof HTMLBodyElement) {
-            ((HTMLBodyElement) body).setText(color);
+        if (body instanceof HTMLBodyElement element) {
+            element.setText(color);
         }
     }
 
@@ -2086,8 +2078,8 @@ public class Document extends Node {
     @JsxGetter
     public String getLinkColor() {
         final HTMLElement body = getBody();
-        if (body instanceof HTMLBodyElement) {
-            return ((HTMLBodyElement) body).getLink();
+        if (body instanceof HTMLBodyElement element) {
+            return element.getLink();
         }
         return null;
     }
@@ -2099,8 +2091,8 @@ public class Document extends Node {
     @JsxSetter
     public void setLinkColor(final String color) {
         final HTMLElement body = getBody();
-        if (body instanceof HTMLBodyElement) {
-            ((HTMLBodyElement) body).setLink(color);
+        if (body instanceof HTMLBodyElement element) {
+            element.setLink(color);
         }
     }
 
@@ -2111,8 +2103,8 @@ public class Document extends Node {
     @JsxGetter
     public String getVlinkColor() {
         final HTMLElement body = getBody();
-        if (body instanceof HTMLBodyElement) {
-            return ((HTMLBodyElement) body).getVLink();
+        if (body instanceof HTMLBodyElement element) {
+            return element.getVLink();
         }
         return null;
     }
@@ -2124,8 +2116,8 @@ public class Document extends Node {
     @JsxSetter
     public void setVlinkColor(final String color) {
         final HTMLElement body = getBody();
-        if (body instanceof HTMLBodyElement) {
-            ((HTMLBodyElement) body).setVLink(color);
+        if (body instanceof HTMLBodyElement element) {
+            element.setVLink(color);
         }
     }
 
@@ -3492,7 +3484,7 @@ public class Document extends Node {
     public ScriptableObject getFonts() {
         if (fonts_ == null) {
             final FontFaceSet fonts = new FontFaceSet();
-            fonts.setParentScope(getWindow());
+            fonts.setParentScope(getParentScope());
             fonts.setPrototype(getPrototype(fonts.getClass()));
             fonts_ = fonts;
         }
@@ -3504,8 +3496,8 @@ public class Document extends Node {
      * @return the value of the {@code all} property
      */
     @JsxGetter
-    public HTMLCollection getAll() {
-        final HTMLCollection all = new HTMLAllCollection(getDomNodeOrDie());
+    public HTMLAllCollection getAll() {
+        final HTMLAllCollection all = new HTMLAllCollection(getDomNodeOrDie());
         all.setAvoidObjectDetection(true);
         all.setIsMatchingPredicate((Predicate<DomNode> & Serializable) node -> true);
         return all;
@@ -3571,8 +3563,7 @@ public class Document extends Node {
     /**
      * Generate and return the URL for the given blob.
      * @param blob the Blob containing the data
-     * @return the URL
-     * {@link org.htmlunit.javascript.host.URL#createObjectURL(Object)}
+     * @return the URL {@link org.htmlunit.javascript.host.URL#createObjectURL(Object)}
      */
     public String generateBlobUrl(final Blob blob) {
         final URL url = getPage().getUrl();
@@ -3597,8 +3588,7 @@ public class Document extends Node {
 
     /**
      * Revokes the URL for the given blob.
-     * @param url the url to revoke
-     * {@link org.htmlunit.javascript.host.URL#revokeObjectURL(Scriptable)}
+     * @param url the url to revoke {@link org.htmlunit.javascript.host.URL#revokeObjectURL(Scriptable)}
      */
     public void revokeBlobUrl(final String url) {
         blobUrl2Blobs_.remove(url);
